--- a/New_version/templates/ACC/Ticket/ticket_add.html
+++ b/New_version/templates/ACC/Ticket/ticket_add.html
@@ -158,12 +158,12 @@
                                             <li class="nk-menu-item">
                                                 <a href="/ACC/Invoice" class="nk-menu-link"><span class="nk-menu-text">فاکتور</span></a>
                                             </li>
+                                            <li class="nk-menu-item">
+                                                <a href="/ACC/Invoice_sended" class="nk-menu-link"><span class="nk-menu-text">ارسال شده</span></a>
+                                            </li>
                                         </ul>
                                         <!-- .nk-menu-sub -->
                                     </li>
-
-                                    <!-- .nk-menu-item -->
-
 
                                     <li class="nk-menu-item has-sub">
                                         <a href="/ACC/Tickets" class="nk-menu-link nk-menu-toggle">
