--- a/New_version/templates/SA/Ticket/ticket_add.html
+++ b/New_version/templates/SA/Ticket/ticket_add.html
@@ -1,18 +1,18 @@
 {% extends './base/base.html' %}
 {% block bodys %}
 
-                        <div class="nk-content">
-                            <div class="container-fluid">
+<div class="nk-content">
+    <div class="container-fluid">
                             <div class="nk-content-inner">
                                 <div class="nk-content-body">
                                     <div class="nk-block-head nk-block-head-sm">
                                         <div class="nk-block-between">
                                             <div class="nk-block-head-content">
                                                 <h3 class="nk-block-title page-title">
-                                                     فروش
+                                                   اضافه کردن تیکت
                                                 </h3>
                                                 <div class="nk-block-des text-soft">
-                                                    <p>{{user}} خوش اومدی </p>
+                                                    <p>{{user}}  </p>
                                                 </div>
                                             </div>
                                             <!-- .nk-block-head-content -->
@@ -66,140 +66,61 @@
 
                                             <!-- .col -->
                                             <div class="col-xxl-8">
-                                                <div class="card card-bordered card-full">
-                                                    <div class="card-inner">
-                                                        <div class="card-title-group">
-                                                            <div class="card-title">
-                                                                <h6 class="title">
-                                                                    <span class="me-2">سفارش ها</span>
-                                                                    <a href="/SA/Pre_Invoice" class="link d-none d-sm-inline">مشاهده لیست</a>
-                                                                </h6>
+
+                                            <form class="form-group" method="get" action="/SA/Ticket_add_finall">
+                                                    <div class="row g-gs">
+                                                        <div class="col-xxl-6">
+                                                            <div class="form-group">
+                                                            <label class="form-label" data-search="on">دپارتمان مورد نظر</label>
+                                                                <div class="form-control-wrap" data-search="on">
+                                                                    <select class="form-select" data-search="on" name="section_to">
+                                                                        <option value="IT">
+                                                                            فناوری اطلاعات
+                                                                        </option>
+                                                                        <option value="SA">
+                                                                            فروش
+                                                                        </option>
+                                                                        <option value="ACC">
+                                                                            حسابداری
+                                                                        </option>
+                                                                        <option value="COM">
+                                                                            بازرگانی
+                                                                        </option>
+                                                                    </select>
+                                                                </div>
                                                             </div>
-                                                            <!--
-                                                            <div class="card-tools">
-                                                                <ul class="card-tools-nav">
-                                                                    <li>
-                                                                        <a href="#"><span>پرداخت شده</span></a>
-                                                                    </li>
-                                                                    <li>
-                                                                        <a href="#"><span>در انتظار</span></a>
-                                                                    </li>
-                                                                    <li class="active">
-                                                                        <a href="#"><span>همه</span></a>
-                                                                    </li>
-                                                                </ul>
+                                                        </div>
+                                                        <div class="col-xxl-6">
+                                                            <div class="form-group">
+                                                            <label class="form-label" data-search="on">موضوع</label>
+                                                                <div class="form-control-wrap" data-search="on">
+                                                                    <input type="text" class="form-control" name="subject" placeholder="موضوع : ">
+                                                                </div>
                                                             </div>
-                                                            -->
                                                         </div>
                                                     </div>
-                                                    <div class="card-inner p-0 border-top">
-                                                        <div class="nk-tb-list nk-tb-orders">
-                                                            <div class="nk-tb-item nk-tb-head">
-                                                                <div class="nk-tb-col">
-                                                                    <span>شماره سفارش</span>
-                                                                </div>
-                                                                <div class="nk-tb-col tb-col-sm">
-                                                                    <span>خریدار</span>
-                                                                </div>
-                                                                <div class="nk-tb-col tb-col-md">
-                                                                    <span>فروشنده</span>
-                                                                </div>
-                                                                <div class="nk-tb-col tb-col-lg">
-                                                                    <span>تاریخ</span>
-                                                                </div>
-                                                                <div class="nk-tb-col"><span>وضعیت</span></div>
+                                                    <hr>
+                                                    <div class="row g-gs">
+                                                        <div class="col-xxl-12">
+                                                            <div class="form-group">
+                                                                <label class="form-label" data-search="on">متن پیام</label>
+                                                                <div class="form-control-wrap" data-search="on">
 
-                                                                <div class="nk-tb-col"><span>&nbsp;</span></div>
-                                                            </div>
-                                                            {%for i in list_factors%}
-                                                            <div class="nk-tb-item">
-                                                                <div class="nk-tb-col">
-                                                                    <span class="tb-lead"><a href="/SA/Invoice_details?P_ID={{i[0]}}">#{{i[0]}}</a></span>
-                                                                </div>
-                                                                <div class="nk-tb-col tb-col-sm">
-                                                                    <div class="user-card">
-                                                                        <div class="user-avatar user-avatar-sm bg-info">
-                                                                            <em class="icon ni ni-user-alt"></em>
-
-                                                                        </div>
-                                                                        <div class="user-name">
-                                                                            <span class="tb-lead">{{i[9]}}</span>
-                                                                        </div>
-                                                                    </div>
-                                                                </div>
-                                                                <div class="nk-tb-col tb-col-md">
-                                                                    <span class="tb-sub">{{i[8]}}</span>
-                                                                </div>
-                                                                <div class="nk-tb-col tb-col-lg">
-                                                                    <span class="tb-sub text-primary">{{i[7]}}</span>
-                                                                </div>
-                                                                <div class="nk-tb-col">
-                                                                    <span class="tb-sub tb-amount">{{i[5]}}</span>
-                                                                </div>
-
-                                                                <div class="nk-tb-col nk-tb-col-action">
-                                                                    <div class="dropdown">
-                                                                        <a class="text-soft dropdown-toggle btn btn-icon btn-trigger" data-bs-toggle="dropdown"><em class="icon ni ni-more-h"></em></a>
-                                                                        <div class="dropdown-menu dropdown-menu-end dropdown-menu-xs">
-                                                                            <ul class="link-list-plain">
-                                                                                <li><a href="/SA/Invoice_details?P_ID={{i[0]}}">مشاهده</a></li>
-                                                                                <li><a href="/SA/invoice_print_it?id={{i[0]}}">چاپ</a></li>
-                                                                            </ul>
-                                                                        </div>
-                                                                    </div>
+                                                                    <textarea id="w3review" name="desck" class="form-control" rows="4" cols="50" placeholder="متن پیام : "></textarea>
                                                                 </div>
                                                             </div>
-                                                            {%endfor%}
                                                         </div>
                                                     </div>
 
-                                                </div>
+                                                    <hr>
+
+
+                                                    <input class="btn btn-success" type="submit" value="اضافه کردن" >
+                                            </form>
                                                 <!-- .card -->
                                             </div>
                                             <!-- .col -->
-                                            <div class="col-md-6 col-xxl-4">
-                                                <div class="card card-bordered card-full">
-                                                    <div class="card-inner border-bottom">
-                                                        <div class="card-title-group">
-                                                            <div class="card-title">
-                                                                <h6 class="title">تیکت های تعیین وضعیت نشده</h6>
-                                                            </div>
-                                                            <div class="card-tools">
-                                                                <ul class="card-tools-nav">
-                                                                    <!--
-                                                                    <li>
-                                                                        <a href="#"><span>لغو</span></a>
-                                                                    </li>
-                                                                    <li class="active">
-                                                                        <a href="#"><span>همه</span></a>
-                                                                    </li>-->
-                                                                </ul>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <ul class="nk-activity">
-                                                    {%for i in tickets%}
-                                                        <a href="/SA/Get_ticket_details?T_id={{i[0]}}">
-                                                            <li class="nk-activity-item">
-                                                                <div class="nk-activity-media user-avatar bg-success">
-                                                                        <div class="user-avatar user-avatar-sm bg-success">
-                                                                            <span>{{i[0]}}</span>
-                                                                        </div>
-                                                                </div>
-                                                                <div class="nk-activity-data">
-                                                                    <div class="label">
-                                                                        {{i[1]}} به شما ({{i[3]}})  این تیکت را زد
-                                                                    </div>
-                                                                    <span class="time">در تاریخ {{i[4]}}</span>
-                                                                </div>
-                                                            </li>
-                                                        </a>
-                                                        {%endfor%}
 
-                                                    </ul>
-                                                </div>
-                                                <!-- .card -->
-                                            </div>
                                             <!-- .col -->
 
                                             <!-- .col -->
@@ -210,11 +131,11 @@
                                 </div>
                             </div>
                         </div>
+
 </div>
 {% endblock %}
-
 {% block menu %}
-                        <div class="nk-sidebar-content">
+                         <div class="nk-sidebar-content">
                             <div class="nk-sidebar-menu" data-simplebar>
                                 <ul class="nk-menu">
 
@@ -292,6 +213,7 @@
                                             <div class="dropdown-menu dropdown-menu-xl dropdown-menu-end dropdown-menu-s1">
                                                 <div class="dropdown-head">
                                                     <span class="sub-title nk-dropdown-title">اطلاع رسانی ها</span>
+                                                    <a href="#">علامت گذاری همه به عنوان خوانده شده</a>
                                                 </div>
                                                 <div class="dropdown-body">
                                                     <div class="nk-notification">
@@ -370,9 +292,85 @@
                                                 </div>
                                             </div>
                                         </li>
+
 {% endblock %}
 
 
 
 
 
+
+<!--
+
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Add another email input</title>
+    <style>
+      .input-plus {
+        display: flex;
+      }
+
+      .inputs-set {
+        border: none;
+      }
+
+      .input-field {
+        border: none;
+        border: 1px solid rgb(209, 209, 209);
+        padding: 8px;
+        margin-right: 4px;
+        margin-bottom: 4px;
+        display: block;
+      }
+
+      .btn-submit,
+      .btn-add-input {
+        border: none;
+        padding: 8px 12px;
+      }
+
+      .btn-submit {
+        background-color: rgb(152, 247, 199);
+      }
+
+      .btn-add-input {
+        background-color: rgb(127, 187, 255);
+      }
+    </style>
+  </head>
+  <body>
+    <form id="form" action="" method="POST">
+      <fieldset class="inputs-set" id="email-list" class="input-field">
+        <input class="input-field" type="email" name="email_field[]" required />
+      </fieldset>
+      <button class="btn-submit" type="submit">SUBMIT</button>
+    </form>
+    <button class="btn-add-input" onclick="addEmailField()" type="">
+      Add email
+    </button>
+
+    <script>
+      const myForm = document.getElementById("email-list");
+
+      function addEmailField() {
+        // create an input field to insert
+        const newEmailField = document.createElement("input");
+        // set input field data type to text
+        newEmailField.type = "email";
+        // set input field name
+        newEmailField.name = "email_field";
+        // set required
+        newEmailField.setAttribute("required", "");
+
+        newEmailField.classList.add("input-field");
+
+        // insert element
+        myForm.appendChild(newEmailField);
+      }
+    </script>
+  </body>
+</html>
+-->
